--- a/styles.css
+++ b/styles.css
@@ -363,7 +363,8 @@ z-index: 999;
 background-color: #993366;
 }
 #contact{
-background: #E6E6FA;
+background-image: url('images/register-bg.webp');
+background-size: cover;
 display: flex;
 justify-content: center;
 align-items: center;
