--- a/styles.css
+++ b/styles.css
@@ -231,7 +231,7 @@ display: block;
 font-family: "Poppins", sans-serif;
 font-size: 14px;
 padding: 12px;
-height: 44px;
+height: 100%;
 width: 200px;
 border: 1px solid #999;
 border-radius: 4px;
@@ -361,8 +361,7 @@ z-index: 999;
 background-color: #993366;
 }
 #contact{
-background-image: url('images/register-bg.webp');
-background-size: cover;
+background: white;
 display: flex;
 justify-content: center;
 align-items: center;
