--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,11 @@
-*{
+* {
   margin: 0;
 }
-.image{
+
+.image {
   height: 700px;
 }
+
 /* Slideshow container */
 .slideshow-container {
   max-width: 1000px;
@@ -18,7 +20,8 @@
 }
 
 /* Next & previous buttons */
-.prev, .next {
+.prev,
+.next {
   cursor: pointer;
   position: absolute;
   top: 50%;
@@ -40,8 +43,9 @@
 }
 
 /* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
 }
 
 /* Caption text */
@@ -79,7 +83,8 @@
   transition: background-color 0.6s ease;
 }
 
-.active, .dot:hover {
+.active,
+.dot:hover {
   background-color: #717171;
 }
 
@@ -90,8 +95,13 @@
 }
 
 @keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
+  from {
+    opacity: .4
+  }
+
+  to {
+    opacity: 1
+  }
 }
 
 /* Style the navigation bar */
@@ -126,15 +136,9 @@
   background-color: #04AA6D;
 }
 
-/* Add responsiveness - will automatically display the navbar vertically instead of horizontally on screens less than 500 pixels */
-@media screen and (max-width: 500px) {
-  .navbar a {
-    float: none;
-    display: block;
-  }
-}
 
-.logo> img{
+
+.logo>img {
   border-radius: 100%;
   border: solid 2.5px black;
   margin-top: 10px;
@@ -142,7 +146,8 @@
   height: 100px;
   width: 100px;
 }
-.title{
+
+.title {
   margin-top: -100px;
   margin-left: 40px;
   font-size: 3.5rem;
@@ -150,19 +155,21 @@
   font-weight: bold;
   text-align: center;
 }
-.h3{
+
+.h3 {
   font-size: 3rem;
   color: black;
   font-weight: bold;
   text-align: center;
 }
 
-.home{
+.home {
   background-image: url('images/bg.jpg');
   background-repeat: no-repeat;
   background-size: cover;
 }
-.about-text{
+
+.about-text {
   font-size: 2.5rem;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-weight: bold;
@@ -170,14 +177,16 @@
   color: black;
   padding-bottom: 7px;
 }
-.text-block{
+
+.text-block {
   padding-top: 10px;
   font-size: 1.1rem;
   font-family: Cambria;
   font-weight: bold;
   text-align: center;
 }
-.subtitle{
+
+.subtitle {
   font-size: 1.5rem;
   font-family: 'Courier New', Courier, monospace;
   color: blue;
@@ -185,7 +194,7 @@
   padding-top: 5px;
 }
 
-.about{
+.about {
   background-color: cyan;
   height: 1000px;
   display: flex;
@@ -193,179 +202,218 @@
   justify-content: space-evenly;
   align-items: center;
 }
-.block1{
+
+.block1 {
   width: 350px;
   margin: 2px 3px;
   padding-top: 10px;
-  
+
 }
-.block2{
+
+.block2 {
   width: 350px;
   margin: 3px 3px;
   padding-top: 10px;
-  
+
 }
 
 /*css styles for contact page*/
 .container1 p {
-color: rgb(136, 136, 136);
-letter-spacing: 0.4px;
+  color: rgb(136, 136, 136);
+  letter-spacing: 0.4px;
 }
 
 .container1 form {
-width: 200px;
+  width: 400px;
+  background-color: white;
 }
 
 .container1 .input-area {
-position: relative;
-margin: 10px 0;
-height: 44px;
-width: 200px;
+  position: relative;
+  margin: 50px 50px;
+  height: 28px;
+  width: 400px;
 }
 
+.container1 {
+  background-color: white;
+  color: black;
+  border: 2px solid black;
+}
 
-
-.container1 input{
-position: absolute;
-display: block;
-font-family: "Poppins", sans-serif;
-font-size: 14px;
-padding: 12px;
-height: 100%;
-width: 200px;
-border: 1px solid #999;
-border-radius: 4px;
-outline: none;
-resize: none;
+.container1 input {
+  position: absolute;
+  display: block;
+  font-family: "Poppins", sans-serif;
+  font-size: 14px;
+  padding: 5px;
+  height: 28px;
+  width: 400px;
+  border: 1px solid #999;
+  border-radius: 4px;
+  outline: none;
+  resize: none;
 }
 
 .container1 .sendbtn {
-display: block;
-width: 200px;
-background: #660033;
-color: #fff;
-font-size: 18px;
-padding: 11px;
-border: none;
-border-radius: 4px;
-cursor: pointer;
+  display: block;
+  width: 420px;
+  margin: 50px 50px;
+  background: #660033;
+  color: #fff;
+  font-size: 18px;
+  padding: 11px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
 .container1 .sendbtn:hover {
-background-color: #993366;
+  background-color: #993366;
 }
 
 
 
 .social-container {
-position: fixed;
-right: 0;
-bottom: 40px;
-transform: translateX(100%);
-transition: transform 0.4s ease-in-out;
-z-index: 10;
+  position: fixed;
+  right: 0;
+  bottom: 40px;
+  transform: translateX(100%);
+  transition: transform 0.4s ease-in-out;
+  z-index: 10;
 }
 
 .social-container {
-transform: translateX(-10px);
+  transform: translateX(-10px);
 }
 
-.custom-social-container {  
-background-color: #fff;
-border-radius: 16px;
-box-shadow: 0 16px 31px -17px rgba(248, 4, 77, 0.6);
-border: 5px solid #660033;
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-font-family: "Poppins", sans-serif;
-position: relative;
-height: 169px;  
-width: 370px;
-max-width: calc(100% - 10px);
+.custom-social-container {
+  background-color: #fff;
+  border-radius: 16px;
+  box-shadow: 0 16px 31px -17px rgba(248, 4, 77, 0.6);
+  border: 5px solid #660033;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: "Poppins", sans-serif;
+  position: relative;
+  height: 169px;
+  width: 370px;
+  max-width: calc(100% - 10px);
 }
 
 .custom-social-container button.cross-btn {
-border: 0;
-color: #660033;
-cursor: pointer;
-font-size: 20px;
-position: absolute;
-top: 5px;
-right: 5px;
+  border: 0;
+  color: #660033;
+  cursor: pointer;
+  font-size: 20px;
+  position: absolute;
+  top: 5px;
+  right: 5px;
 }
 
 .custom-social-container p {
-background-color: #660033;
-border-radius: 0 0 10px 10px;
-color: #fff;
-font-size: 14px;
-line-height: 28px;
-padding: 2px 17px 6px;
-position: absolute;
-top: 0;
-left: 50%;
-margin: 0;
-transform: translateX(-50%);
-text-align: center;
-width: 215px;
+  background-color: #660033;
+  border-radius: 0 0 10px 10px;
+  color: #fff;
+  font-size: 14px;
+  line-height: 28px;
+  padding: 2px 17px 6px;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  margin: 0;
+  transform: translateX(-50%);
+  text-align: center;
+  width: 215px;
 }
 
 .custom-social-container ul {
-display: flex;
-list-style-type: none;
-padding: 0;
-margin-top: 58px;
+  display: flex;
+  list-style-type: none;
+  padding: 0;
+  margin-top: 58px;
 }
 
 .custom-social-container ul li {
-margin: 0 10px;
+  margin: 0 10px;
 }
 
 .custom-social-container ul li a {
-border: 1px solid #999;
-border-radius: 50%;
-color: #660033;
-font-size: 20px;
-display: flex;
-justify-content: center;
-align-items: center;
-height: 50px;
-width: 50px;
-text-decoration: none;
+  border: 1px solid #999;
+  border-radius: 50%;
+  color: #660033;
+  font-size: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50px;
+  width: 50px;
+  text-decoration: none;
 }
 
 .custom-social-container ul li a:hover {
-border-color: #ffd791;
-box-shadow: 0 9px 12px -9px #ffd791;
+  border-color: #ffd791;
+  box-shadow: 0 9px 12px -9px #ffd791;
 }
 
 .connect-btn {
-border-radius: 26.5px;
-background-color: #660033;
-border: 1px solid #660033;
-box-shadow: 0 16px 22px -17px #660033;
-color: #fff;
-cursor: pointer;
-font-size: 16px;
-line-height: 20px;
-padding: 12px 20px;
-position: fixed;
-bottom: 20px;
-right: 20px;
-z-index: 999;
+  border-radius: 26.5px;
+  background-color: #660033;
+  border: 1px solid #660033;
+  box-shadow: 0 16px 22px -17px #660033;
+  color: #fff;
+  cursor: pointer;
+  font-size: 16px;
+  line-height: 20px;
+  padding: 12px 20px;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 999;
 }
 
 .connect-btn:hover {
-background-color: #993366;
+  background-color: #993366;
 }
-#contact{
-background-image: url('images/register-bg.webp');
-background-size: cover;
-display: flex;
-justify-content: center;
-align-items: center;
-font-family: "Poppins", sans-serif;
-min-height: 100vh;
+
+#contact {
+  background-image: url('https://media.istockphoto.com/id/1397455933/photo/top-view-with-register-now-text-in-notebook-pencil-keyboard-and-coffee-on-wood-table.jpg?s=612x612&w=0&k=20&c=bUBEkkNrKZBKC3IByYFxSmb4dAFOgJYt-2-c8mJgkzA=');
+  background-size: cover;
+  padding-left: 650px;
+  padding-right: 650px;
+  padding-top: 400px;
+  padding-bottom: 300px;
+  font-family: "Poppins", sans-serif;
+  height: 700px;
+}
+
+/* Add responsiveness - will automatically display the navbar vertically instead of horizontally on screens less than 500 pixels */
+@media screen and (max-width: 700px) {
+  
+  .navbar a {
+    float: none;
+    display: block;
+  }
+  img{
+    width: max-width;
+  }
+  .about{
+    height: 100%;
+  }
+  #contact{
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 40px;
+    padding-bottom: 30px;
+    font-family: "Poppins", sans-serif;
+    height: 600px;
+  }
+  .container1 input{
+    width: 300px;
+  }
+  .container1 .sendbtn{
+    width: 300px;
+  }
 }
