--- a/styles.css
+++ b/styles.css
@@ -426,9 +426,9 @@
     width: 250px;
     
   }
-  *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
+  .custom-social-container p ,.social-container{
+  left: 40%;
+  right: 2%;
+  
+}
 }
