--- a/styles.css
+++ b/styles.css
@@ -195,7 +195,7 @@
 }
 
 .about {
-  background-color: cyan;
+  background-color: antiquewhite;
   height: 1000px;
   display: flex;
   flex-direction: row;
